--- a/test.html
+++ b/test.html
@@ -1,3 +1,3 @@
 <h1> My first website</h1>
-<p>My fave color is red <span style="color:red;">red</span>
+<p>My fave color is <span style="color:red;">red</span>
 </p>
