--- a/Elements.html
+++ b/Elements.html
@@ -1,1 +1,12 @@
 <h1> Heading 1 </h1>
+<h2> Heading 2 </h2>
+<p>This is my first paragraph.</p>
+<div>
+	<div>	
+		<div>
+			<a href="http://skillshare.com">Visit the Skillshare website</a>
+		</div>
+	</dir>
+</div>
+
+</dir>
