--- a/Elements.html
+++ b/Elements.html
@@ -4,7 +4,7 @@
 <div>
 	<div>	
 		<div>
-			<a href="http://skillshare.com">Visit the Skillshare website</a>
+			<a href="http://skillshare.com"target="_blank">Visit the Skillshare website</a>
 		</div>
 	</dir>
 </div>
