--- a/Elements.html
+++ b/Elements.html
@@ -1,4 +1,10 @@
-<h1> Heading 1 </h1>
+<html>
+<head>
+	<title>Elements!!!</title>
+</head>
+<body>
+</html>
+<h1 style="color:blue; text-decoration: underline;"> Heading 1 </h1>
 <h2> Heading 2 </h2>
 <p>This is my first paragraph.</p>
 <div>
@@ -11,4 +17,6 @@
 
 <p>Hey there, my name is:<br>V</p>
 
-<img src="test.jpg">
+<img src="test3.jpg">
+</body>
+</html>
