--- a/stylish.html
+++ b/stylish.html
@@ -2,11 +2,23 @@
 <html>
 <head>
 	<title>stylish</title>
+	<style type="text/css">
+		h1{
+			color:orange;
+			font-size:90px;
+			text-decoration: underline;
+			}
+		h2{
+			color:green;
+			font-size:50px;
+			text-decoration: underline;
+		}
+	</style>
 </head>
 <body>
 
-<h1 style="color:red; font-size:90px;">Heading 1 - 1</h1>
-<h1 style=>Heading 1 - 2</h1>
+<h1>Heading 1 - 1</h1>
+<h1>Heading 1 - 2</h1>
 <h1>Heading 1 - 3</h1>
 <h2>Heading 2 - 1</h2>
 <h2>Heading 2 - 2</h2>
