--- a/stylish.html
+++ b/stylish.html
@@ -2,27 +2,18 @@
 <html>
 <head>
 	<title>stylish</title>
-	<style type="text/css">
-		h1{
-			color:orange;
-			font-size:90px;
-			text-decoration: underline;
-			}
-		h2{
-			color:green;
-			font-size:50px;
-			text-decoration: underline;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/text.css">
+
 </head>
 <body>
 
-<h1>Heading 1 - 1</h1>
+
+<h1 id="first" class="small" style="font-size:20px">Heading 1 - 1</h1>
 <h1>Heading 1 - 2</h1>
-<h1>Heading 1 - 3</h1>
+<h1 class="small">Heading 1 - 3</h1>
 <h2>Heading 2 - 1</h2>
-<h2>Heading 2 - 2</h2>
-<h2>Heading 2 - 3</h2>
+<h2 class="small">Heading 2 - 2 <span>Try me</span></h2>
+<h2>Heading 2 - 3 <span>Try me</span> </h2>
 
 </body>
 </html>
