--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,37 @@
 </head>
 
 <body>
-	<img src="img/prifil.jpg">
+	<div class="wrapper">
+		<header>
+			<img src="img/profile.jpg">
+			<h1>Wreck-it Ralph</h1>
+		</header>
+		<div class="content">
+			<h2>About Ralph</h2>
+			<p>An 8-bit video-game bad guy who travels the length of the arcade to prove that he is a good guy.</p>
+			<h2>Ralph's Characteristics</h2>
+			<ol>
+				<li>He's super cool.</li>
+				<li>He's treated as a bad-ass.</li>
+				<li>He's friendly to glitchy-girl game characters.</li>
+			</ol>
+			<img class="big image" src="img/big-image.jpg">
+			<p class="caption"> This is Ralph in action. </p>
+			<h2>Ralph's friends</h2>
+			<ul>
+				<li><a href="https://adventuretime.fandom.com/wiki/Jake" target="_blank" title="Visit Jake's page."> Jake</a> from Adventure time.</li>
+				<li>Bloo from Foster.</li>
+				<li>Aurthur from king Arthur's disaster.</li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		<footer>
+			
+		</footer>
+	</div>
+
+</body>
+</body>	
 </body>
 </html>
