I moved Elements to Basic CSS & html

--- a/Wreck it Ralph website/Index.html
+++ b/Wreck it Ralph website/Index.html
@@ -25,7 +25,7 @@
 			<h2>Ralph's friends</h2>
 			<ul>
 				<li><a href="https://adventuretime.fandom.com/wiki/Jake" target="_blank" title="Visit Jake's page."> Jake</a> from Adventure time.</li>
-				<li><a href="https://fhif.fandom.com/wiki/Bloo" target="_blank" title="Visit Bloo's page."></a>Bloo from Foster.</li>
+				<li><a href="https://fhif.fandom.com/wiki/Bloo" target="_blank" title="Visit Bloo's page.">Bloo</a> from Foster.</li>
 				<li>Aurthur from king Arthur's disaster.</li>
 				<li></li>
 				<li></li>
