--- a/Wreck it Ralph website/Index pt2.html
+++ b/Wreck it Ralph website/Index pt2.html
@@ -26,13 +26,15 @@
 			<ul>
 				<li><a href="https://adventuretime.fandom.com/wiki/Jake" target="_blank" title="Visit Jake's page."> Jake</a> from Adventure time.</li>
 				<li><a href="https://fhif.fandom.com/wiki/Bloo" target="_blank" title="Visit Bloo's page.">Bloo</a> from Foster.</li>
-				<li>Aurthur from king Arthur's disaster.</li>
-				<li></li>
-				<li></li>
+				<li><a href="https://kingarthursdisasters.fandom.com/wiki/King_Arthur" target="_blank" title="Visit Arthur's page.">Arthur</a> from king Arthur's disaster.</li>
 			</ul>
 		</div>
 		<footer>
-			
+			<ul>
+				<li>Made by V <a href="https://www.skillshare.com/classes/Hand-Coding-Your-First-Website-HTML-and-CSS-Basics-Original/1483893097?lessonsTab=on" target="_blank" title="Visit Skillshare Website"></a></li>
+				<li>Made during a skillshare class</li>
+				<li>&copy; 2020</li>
+			</ul>
 		</footer>
 	</div>
 
