--- a/Wreck it Ralph website/index pt3.html
+++ b/Wreck it Ralph website/index pt3.html
@@ -24,13 +24,15 @@
 		<p class="caption"> This is Ralph in action.</p>
 		<h2>Ralph's friends</h2> 
 		<ul>
-			<li>Jake from Adventure Time</li>
-			<li>Bloo from Foster</li>
-			<li>Arthur from King Arthur's Disasters</li>
+			<li><a href="https://adventuretime.fandom.com/wiki/Jake" target="_blank" title="Visit Jake's Page."> Jake </a> from Adventure Time</li>
+			<li> <a href="https://fhif.fandom.com/wiki/Bloo" target="_blank" title="Visit Bloo's Page."> Bloo </a> from Foster</li>
+			<li> <a href="https://kingarthursdisasters.fandom.com/wiki/King_Arthur" target="_blank" title="Visit Arthur's Page."> Arthur </a> from King Arthur's Disasters</li>
 		</ul>
 	</div>
-<footer>
-	
-</footer>
+	<footer>
+		<li>Made by V</li>
+		<li>Made during a Skillshare class</li>
+		<li>&copy; 2020</li>
+	</footer>
 </body>
 </html>
